# Metcalf_Law_Crypto_Valuation

./: .coverage  .env.bak  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  REPRODUCTION_GUIDE.md  STRUCTURE.md  dune_query_aave_active_addresses_nonce5.sql  dune_query_arbitrum_active_addresses_nonce5.sql  dune_query_compound_active_addresses_nonce5.sql  dune_query_ethereum_active_addresses.sql  dune_query_lido_active_addresses_nonce5.sql  package.json  pyproject.toml  requirements.txt  setup.py  setup_dune.sh
.github/workflows/: ci.yml
data/: dune_query_ids.json
data/processed/: regression_results_expanded.csv
data/robustness_results/: robustness_analysis_results.json  robustness_tables.tex
docs/: api.md
examples/: README.md  analyze_ethereum.py
paper/: paper.tex  references.bib
queries/: README.md  dune_query_ethereum_active_addresses_nonce5.sql  dune_query_ethereum_nonce_filtered.sql  dune_query_ids.json  dune_query_maker_active_addresses_nonce5.sql  dune_query_polygon_active_addresses_nonce5.sql  dune_query_simple.sql  dune_query_sushiswap_active_addresses_nonce5.sql  dune_query_thegraph_active_addresses_nonce5.sql  dune_query_uniswap_active_addresses_nonce5.sql
reproducibility/: README.md
reproducibility/queries/: dune_query_chainlink_active_addresses_nonce5.sql  dune_query_filecoin_active_addresses_nonce5.sql  dune_query_livepeer_active_addresses_nonce5.sql  dune_query_optimism_active_addresses_nonce5.sql
reproducibility/scripts/: collect_new_networks.py  refresh_l2_data.py  robustness_analysis.py  run_full_regression.py
scripts/: README.md  collect_defi_data.py  collect_historical_data.py  create_time_series_figure.py  download_full_history.py  execute_dune_queries.py  generate_per_token_graphs.py  run_arbitrum_query.py
scripts/analysis/: analyze_compute_networks.py  analyze_filecoin.py  analyze_layer2_existing_data.py  analyze_layer2_networks.py  analyze_network_base.py  research_token_networks.py  validate_layer2_predictions.py
scripts/data_collection/: collect_coingecko_safe.py  collect_filecoin_data.py  collect_layer2_data.py  collect_social_identity_networks.py  correlate_dune_coingecko.py  create_and_execute_dune_queries.py  create_and_execute_single_query.py  execute_query_4062489.py  fetch_eth_query.py  fetch_multi_chain.py  fetch_query_3488164.py  fetch_when_ready.py
scripts/utilities/: QUICK_NETWORK_CHECK.py  STOP_ALL_QUERIES.py  check_dune_account.py  check_dune_dates.py  check_dune_raw.py  check_query_status.py  check_running_queries.py  example_data_collection.py  find_dune_query.py  use_csv_instead.py  work_with_sample_data.py
src/analysis/: __init__.py  markov_switching.py  metcalfe_model.py
src/data_collection/: README.md  __init__.py  arweave_collector.py  coingecko_safe.py  coinpaprika_collector.py  dune_query_manager.py  ethereum_collector.py  filecoin_collector.py  helium_collector.py  network_collector.py  network_filtering_config.py
tests/: conftest.py  test_integration.py  test_markov_switching.py  test_metcalfe.py
tests/integration/: test_and_visualize_markov.py  test_coingecko_data_collection.py  test_credit_usage.py  test_credit_usage_advanced.py  test_dune.py  test_dune_api_key.py  test_dune_sdk.py  test_dune_simple.py  test_ethereum_data.py  test_explorer_apis.py  test_filecoin_collector.py  test_free_tier_limits.py  test_last_365_days.py  test_models.py  (+5 more)
